# Uls

./: .gitignore  CMakeLists.txt  Makefile  README.md  uls
inc/: uls.h
libmx/: Makefile  Makefile 2  Makefile 3
libmx/inc/: libmx.h
libmx/src/: mx_del_strarr.c  mx_print_error.c  mx_printstr.c  mx_realloc.c  mx_strcpy.c  mx_strdup.c  mx_strlen.c  mx_swaps_arr.c
src/: count_el_in_line.c  main 2.c  main.c  mx_acl_attr_if.c  mx_color_print.c  mx_count_delim.c  mx_error_dir 2.c  mx_error_dir.c  mx_error_flag 2.c  mx_error_flag.c  mx_fill_dir.c  mx_find_flag.c  mx_flag_R.c  mx_free_dir.c  mx_free_void_arr.c  mx_gid_to_name.c  mx_if_sock_blk_fifo.c  mx_license_if.c  mx_loop_print.c  mx_ls_dir.c  mx_ls_flag_1.c  mx_ls_flag_G.c  mx_ls_flag__A.c  mx_ls_flag_a.c  mx_ls_flag_l.c  mx_ls_no_flags.c  mx_ls_show_directory.c  mx_malloc_dir.c  mx_open_dir.c  mx_output.c  mx_output_loop.c  mx_print_dir.c  mx_print_dir_flag_G.c  mx_print_dir_new_line.c  mx_print_error.c  mx_print_error_flags.c  mx_print_flag_F.c  mx_print_link_uid_gid_size.c  mx_print_mode.c  mx_print_time_name.c  (+6 more)
