cmake_minimum_required(VERSION 3.15)
project(Uls C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(libmx/src)
include_directories(src)

add_executable(Uls
        inc/uls.h
        libmx/inc/libmx.h
        libmx/src/mx_atoi.c
        libmx/src/mx_binary_search.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_count_arr_el.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_extra_spaces.c
        libmx/src/mx_del_extra_symbols.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_substr_index.c
        libmx/src/mx_hex_to_nbr.c
        libmx/src/mx_isalpha.c
        libmx/src/mx_isdigit.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_maximum.c
        libmx/src/mx_memccpy.c
        libmx/src/mx_memchr.c
        libmx/src/mx_memcmp.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_memmem.c
        libmx/src/mx_memmove.c
        libmx/src/mx_memrchr.c
        libmx/src/mx_memset.c
        libmx/src/mx_min.c
        libmx/src/mx_minimal.c
        libmx/src/mx_nbr_to_hex.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_print_strarr.c
        libmx/src/mx_print_unicode.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_quicksort.c
        libmx/src/mx_read_line.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_sort_list.c
        libmx/src/mx_sqrt.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strchr.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncat.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        libmx/src/mx_swaps_arr.c
        src/count_el_in_line.c
        src/main.c
        src/mx_acl_attr_if.c
        src/mx_color_print.c
        src/mx_count_delim.c
        src/mx_error_dir.c
        src/mx_error_flag.c
        src/mx_fill_dir.c
        src/mx_find_flag.c
        src/mx_free_dir.c
        src/mx_free_void_arr.c
        src/mx_gid_to_name.c
        src/mx_if_sock_blk_fifo.c
        src/mx_license_if.c
        src/mx_ls_dir.c
        src/mx_ls_flag_l.c
        src/mx_malloc_dir.c
        src/mx_output.c
        src/mx_output_loop.c
        src/mx_print_dir.c
        src/mx_print_error.c
        src/mx_print_error_flags.c
        src/mx_print_flag_F.c
        src/mx_print_link_uid_gid_size.c
        src/mx_print_mode.c
        src/mx_print_time_name.c
        src/mx_print_total.c
        src/mx_sort_dir.c
        src/mx_strcmp_ls.c
        src/mx_uid_to_name.c
        src/mx_winsize.c)
